--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -24,3 +24,9 @@ args:
     help: The string to replace with
     takes_value: true
     required: true
+- yolo:
+    short: y
+    long: yes
+    help: Automatically run with no tests or confirmation
+    takes_value: false
+    required: false
