--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "cuckoo"
 version = "0.1.0"
 authors = ["Daniel Mason"]
+description = "Find And Replace in MySql"
+license = "MIT"
+repository = "https://github.com/apolitical/farm"
 
 [dependencies]
 clap = {version = "^2.27.0", features = ["yaml"]}
