--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,20 @@
 [package]
 name = "farm"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Daniel Mason"]
 description = "Find And Replace in MySql"
 license = "MIT"
 repository = "https://github.com/apolitical/farm"
+include = [
+    'src/**/*',
+    'Cargo.lock',
+    'Cargo.toml',
+    'CHANGELOG.md',
+    'CODE_OF_CONDUCT.md',
+    'CONTRIBUTING.md',
+    'README.md',
+    'LICENSE',
+]
 
 [dependencies]
 clap = {version = "^2.27.0", features = ["yaml"]}
